--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kipshagen</title>
-    <link rel="stylesheet" href="style.css">
+    <title>John Kipshagen</title>
+    <style type="text/css">
+      * {
+        box-sizing: border-box;
+      }
+      body, html {
+        padding: 0;
+        margin: 0;
+      }
+      img {
+        display: block;
+        max-height: 100vh;
+        max-width: 100vw;
+        margin: auto;
+      }
+    </style>
   </head>
   <body>
-    <h1><a href="svenja/index.html">Svenja</a></h1>
-    <h1>Daniel</h1>
-    <h1>Eli</h1>
-    <h1><a href="/john">John</a></h1>
+    <img src="john.jpg" alt="The glorious John Kipshagen.">
   </body>
 </html>
