--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       body, html {
         padding: 0;
         margin: 0;
+        height: 100vh;
+        display: flex;
+        align-items: center;
       }
       img {
         display: block;
