--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
       body, html {
         padding: 0;
         margin: 0;
-        height: 100vh;
+
         display: flex;
+        flex-basis: fit-content;
         align-items: center;
+        justify-content: center;
+
+        background-color: lightgray;
       }
       img {
-        display: block;
-        max-height: 100vh;
-        max-width: 100vw;
-        margin: auto;
+        background-color: white;
+        padding: 1rem 1.25rem;
+
+        flex-grow: 1;
+        flex-shrink: 1;
+        max-height: 100dvh;
+        max-width: 100dvw;
       }
     </style>
   </head>
   <body>
-    <img src="john.jpg" alt="The glorious John Kipshagen.">
+    <img src="john.jpg" alt="The glorious John Kipshagen." title="Wuff!">
   </body>
 </html>
