--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       body, html {
         padding: 0;
         margin: 0;
+        height: 100dvh;
 
         display: flex;
         flex-basis: fit-content;
